# wechat_article

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.runtime.txt
app/: __init__.py  main.py  settings.py  templating.py
docs/: README.md  compliance-wechat-original.md  handoff-2026-03-10-latest.md  handoff-2026-03-10.md  mvp-closeout-2026-03-08.md  post-v1.1.0-frontend-redesign-plan.md  post-v1.1.0-recording-guide.md  post-v1.1.0-roadmap.md  post-v1.1.0-task-plan.md  release-process.md  release-v1.1.0.md  release-v1.1.1.md  release-v1.1.2.md  research-wechat-fetch-and-browser-options-2026-03-07.md  web-console-plan.md  wechat-content-factory-plan.md
migrations/: README.md  env.py
scripts/: cleanup_legacy_app_docker.sh  deploy_docker_legacy.sh  deploy_from_git.sh  deploy_local_from_git.sh  deploy_on_server.sh  deploy_prebuilt_from_local.sh  docker_infra.sh  enqueue_recent_feedback.py  install_host_runtime_ubuntu.sh  install_local_systemd.sh  local_runtime.sh  repair_server_git_checkout.sh  run_editorial_worker.py  run_feedback_worker.py  run_local_api.sh  run_local_worker.sh  run_phase2_worker.py  run_phase3_worker.py  run_phase4_worker.py  run_topic_fetch_worker.py  seed_writing_factors.py  setup_local_host.sh  sync_to_server.sh  wechat_exporter_poc.py
tests/: test_admin_editorial_page.py  test_admin_home_api.py  test_admin_llm_api.py  test_admin_monitor_api.py  test_admin_pages_template.py  test_admin_runtime_api.py  test_admin_topics_api.py  test_app_routes.py  (+46 more)
(+192 files in other folders)
